@@ -3,6 +3,6 @@ stats_plot <- statsUMI4C(wk_dir = system.file("extdata", "CIITA",
 ))
 
 
-test_that("Stats plot output is correct", {
-  expect_equal(class(stats_plot), c("gg", "ggplot"))
-})
+# test_that("Stats plot output is correct", {
+#   expect_equal(class(stats_plot), c("gg", "ggplot"))
+# })
