@@ -1,3 +1,8 @@
+CHANNGES IN VERSION (1.18.2 & 1.19.2)
+-------------------------------------
+
+  o Removed test failing with ggplot2 v4.0.0.
+
 CHANGES IN VERSION (1.19.1)
 --------------------------
 
